# ecomm

./: .gitignore  CLAUDE.md  Makefile  README.md  dropshipping-platform-master-plan.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 067876d001ca_add_order_tracking_fields.py  2b29cbf8ecb6_add_products_and_product_variants_tables.py  575966a85e3f_add_subscriptions_and_user_plan.py  6ecd04e1cfca_add_customers_wishlist_and_order_.py  d5a8895cadc3_add_orders_and_order_items_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: ab_tests.py  analytics.py  auth.py  bulk.py  categories.py  currency.py  customer_account.py  customer_auth.py  customer_orders.py  customers.py  deps.py  exports.py  health.py  orders.py  products.py  public.py  refunds.py  segments.py  store_lookup.py  stores.py  themes.py  webhooks.py
backend/app/constants/: __init__.py  themes.py
backend/app/models/: __init__.py  ab_test.py  customer.py  discount.py  gift_card.py  notification.py  order.py  product.py  store.py  supplier.py  tax.py  upsell.py  user.py  webhook.py  wishlist.py
backend/app/schemas/: analytics.py  auth.py  customer.py  discount.py  fraud.py  (+12 more)
backend/tests/: conftest.py  test_ab_tests.py  test_analytics.py  test_bulk.py  test_currency.py  test_customer_account.py  test_customer_auth.py  test_customers.py  test_domains.py  test_gift_cards.py  test_orders.py  test_refunds.py  test_reviews.py  test_service_integration_service.py  test_store_webhooks.py  test_stores.py  test_subscriptions.py  test_teams.py  test_themes.py
(+1463 files in other folders)
